--- a/server/src/tsconfig.json
+++ b/server/src/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": ".",
-    "outDir": "../dist",
+    "rootDir": "server/src",
+    "outDir": "server/dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "../dist"]
+  "include": ["server/src/**/*"],
+  "exclude": ["node_modules", "server/dist"]
 }
