--- a/server/src/tsconfig.json
+++ b/server/src/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "../dist",
-    "rootDir": ".",
-    "resolveJsonModule": true
+    "outDir": "dist"
   },
-  "include": ["**/*.ts"],
-  "exclude": ["../node_modules", "../dist"]
+  "include": ["routes/**/*", "services/**/*", "utils/**/*", "schemas/**/*", "index.ts"]
 }
