Refactor TypeScript include paths in tsconfig.json
Removed specific paths from include array and updated to a more general structure.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,11 +10,9 @@
     "outDir": "dist"
   },
   "include": [
-    "./src/routes/**/*",
-    "./src/services/**/*",
-    "./src/utils/**/*",
-    "./src/schemas/**/*",
-    "./src/types/**/*",
-    "./src/index.ts"
+    "./routes/**/*",
+    "./services/**/*",
+    "./utils/**/*",
+    "./index.ts"
   ]
 }
