Update tsconfig.json to include 'exclude' property
Added 'exclude' property to tsconfig.json to ignore 'dist' directory.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,11 +10,12 @@
     "outDir": "dist"
   },
   "include": [
-    "./src/routes/**/*",
-    "./src/services/**/*",
-    "./src/utils/**/*",
-    "./src/schemas/**/*",
-    "./src/types/**/*",
-    "./src/index.ts"
-  ]
+    "src/routes/**/*",
+    "src/services/**/*",
+    "src/utils/**/*",
+    "src/schemas/**/*",
+    "src/types/**/*",
+    "src/index.ts"
+  ],
+  "exclude": ["dist"]
 }
