--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsx --watch src/index.ts",
     "start": "tsx src/index.ts",
-    "build": "tsc --build src/tsconfig.json",
-    "typecheck": "tsc --noEmit -p src/tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "typecheck": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.18.0",
