--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
