--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "zod": "^3.23.8",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.1.0",
+    "@types/uuid": "^9.0.7",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.3",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.3",
     "tsx": "^4.7.1",
-    "typescript": "^5.5.4",
-    "@types/uuid": "^9.0.7"
+    "typescript": "^5.5.4"
   }
 }
