--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install dependencies
+      - name: Install dependencies in server folder
         run: |
           cd server
           npm ci
@@ -34,11 +34,11 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Upload artifact
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: server/dist
+          path: server
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
       contents: read # Required for actions/checkout
 
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
@@ -66,4 +66,4 @@ jobs:
         with:
           app-name: 'boreal-staff-server'
           slot-name: 'Production'
-          package: server/dist
+          package: server
