feat: migrate document storage to azure blob

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,5 @@ NODE_ENV=development
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
 TWILIO_AUTH_TOKEN=your-twilio-auth-token
 PDF_STORAGE_PATH=./storage/pdfs
+AZURE_STORAGE_CONNECTION_STRING=
+AZURE_STORAGE_CONTAINER=documents
