--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jszip": "^3.10.1",
+    "multer": "^2.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
@@ -22,6 +24,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.1.0",
     "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
