Add JWT auth endpoints and middleware

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,4 @@ TWILIO_AUTH_TOKEN=your-twilio-auth-token
 PDF_STORAGE_PATH=./storage/pdfs
 AZURE_STORAGE_CONNECTION_STRING=
 AZURE_STORAGE_CONTAINER=documents
+JWT_SECRET=your-secret-key
