--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "module": "ESNext",
     "moduleResolution": "Node",
+    "lib": ["ES2020"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "isolatedModules": true,
+    "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx",
-    "baseUrl": "./src",
-    "types": ["node", "jest"]
+    "isolatedModules": false,
+    "types": ["node", "jest"],
+    "outDir": "dist"
   },
-  "include": ["next-env.d.ts", "src/**/*"],
+  "include": ["server/src/**/*"],
   "exclude": ["node_modules"]
 }
