--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,28 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/server.js",
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Boreal Financial Staff Server (clean, unified build)",
   "type": "module",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "lint": "tsc --noEmit"
+  },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
     "@prisma/client": "^5.22.0",
     "@sendgrid/mail": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
+    "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "twilio": "^4.23.0",
     "uuid": "^13.0.0",
