Update .env with new database URL and secrets
Updated database connection string and added environment variables for JWT and Twilio.

--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
+NODE_ENV=development
 PORT=5000
-DATABASE_URL="file:./dev.db"
+
+DATABASE_URL=postgres://borealadmin:YOURPASSWORD@boreal-db.postgres.database.azure.com:5432/postgres?sslmode=require
+
+JWT_SECRET=supersecretjwtkey123
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_SMS_NUMBER=
+TWILIO_VOICE_NUMBER=
+TWILIO_VOICE_WEBHOOK_URL=
+
+SENDGRID_API_KEY=
+SENDGRID_FROM=no-reply@boreal.financial
