--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Boreal Financial Staff Server (clean, unified build)",
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "lint": "tsc --noEmit"
   },
   "dependencies": {
