--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -2,27 +2,52 @@ name: Deploy Staff Server to Azure
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Setup Node
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          check-latest: true
 
-      - name: Install deps
+      # -----------------------------
+      # Install root deps
+      # -----------------------------
+      - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      # -----------------------------
+      # Build TypeScript (server only)
+      # Produces: server/dist/src/index.js
+      # -----------------------------
+      - name: Build server
         run: npm run build
 
-      - name: Zip artifact
-        run: zip -r release.zip . -x "*.git*"
+      # -----------------------------
+      # Prepare deployment package
+      # We ONLY send compiled JS, package.json, and node_modules
+      # -----------------------------
+      - name: Create deployment ZIP
+        run: |
+          rm -f release.zip
+
+          zip -r release.zip \
+            server/dist \
+            package.json \
+            package-lock.json \
+            node_modules \
+            -x "*.git*" \
+            -x ".github/*" \
+            -x "tests/*" \
+            -x "test/*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -33,18 +58,23 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
           name: release
           path: .
 
-      - name: Unzip
-        run: unzip release.zip
+      - name: Extract artifact
+        run: unzip -o release.zip
 
+      # -----------------------------
+      # Deploy to Azure App Service
+      # -----------------------------
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: boreal-staff-backend
+          app-name: boreal-staff-server   # <-- FIXED
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
