--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/server/src/index.js",
 
-    "typecheck": "tsc -p server/tsconfig.json --noEmit",
+    "typecheck": "tsc -p tsconfig.build.json --noEmit",
     "test": "echo \"no tests yet\""
   },
 
