--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
   "name": "staff-server",
   "version": "1.0.0",
-  "type": "module",
   "private": true,
-  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch server/src/index.ts",
-    "start": "node --env-file=.env server/src/index.js || tsx server/src/index.ts",
-    "build": "tsc --project server/tsconfig.json",
-    "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext ts,tsx --fix",
+    "dev": "tsx --watch server/src/index.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/server/src/index.js",
+    "typecheck": "tsc -p server/tsconfig.json --noEmit",
     "migrate": "tsx server/src/db/migrator.ts",
     "generate:migration": "drizzle-kit generate",
     "push:migration": "drizzle-kit push"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.18.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "@azure/storage-blob": "12.29.1",
+    "body-parser": "1.20.3",
+    "compression": "^1.8.1",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.21.2",
+    "helmet": "7.0.0",
+    "jsonwebtoken": "9.0.2",
+    "jszip": "3.10.1",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "pg": "8.13.1",
+    "twilio": "5.10.5",
+    "zod": "3.23.8",
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.8.0",
-    "express": "^4.19.2",
-    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
+    "@types/body-parser": "1.19.5",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
+    "@types/jsonwebtoken": "9.0.6",
+    "@types/jszip": "3.4.1",
+    "@types/multer": "2.0.0",
+    "@types/node": "20.11.30",
+    "@types/pg": "8.11.6",
     "drizzle-kit": "^0.24.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "prettier": "^3.2.5",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.5"
+    "tsx": "^4.20.6",
+    "typescript": "5.4.5"
   }
 }
