--- a/package.json
+++ b/package.json
@@ -3,38 +3,49 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+
   "scripts": {
     "dev": "tsx --watch server/src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/server/src/index.js",
     "typecheck": "tsc -p server/tsconfig.json --noEmit",
-    "migrate": "drizzle-kit push",
-    "generate:migration": "drizzle-kit generate"
+    "migrate": "tsx server/src/db/migrator.ts",
+    "generate:migration": "drizzle-kit generate",
+    "push:migration": "drizzle-kit push"
   },
+
   "dependencies": {
     "@azure/storage-blob": "12.29.1",
+    "@sendgrid/mail": "^8.1.6",
+    "bcryptjs": "2.4.3",
     "body-parser": "1.20.3",
+    "compression": "^1.8.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
+    "drizzle-orm": "^0.32.0",
+    "drizzle-zod": "^0.8.0",
     "express": "4.21.2",
     "helmet": "7.0.0",
     "jsonwebtoken": "9.0.2",
-    "pg": "8.13.1",
-    "drizzle-orm": "^0.32.0",
-    "drizzle-zod": "^0.8.0",
-    "zod": "3.23.8",
-    "uuid": "9.0.1",
-    "morgan": "1.10.1",
-    "multer": "2.0.2",
     "jszip": "3.10.1",
-    "bcryptjs": "2.4.3"
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "pg": "8.13.1",
+    "twilio": "5.10.5",
+    "uuid": "^9.0.1",
+    "zod": "3.23.8"
   },
+
   "devDependencies": {
-    "drizzle-kit": "^0.24.1",
-    "@types/node": "20.11.30",
+    "@types/body-parser": "1.19.5",
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
-    "@types/multer": "2.0.0",
     "@types/jsonwebtoken": "9.0.6",
+    "@types/jszip": "3.4.1",
+    "@types/multer": "2.0.0",
+    "@types/node": "20.11.30",
+    "@types/pg": "8.11.6",
+    "drizzle-kit": "^0.24.1",
     "tsx": "^4.20.6",
     "typescript": "5.4.5"
   }
