--- a/.env
+++ b/.env
@@ -1,15 +1,28 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 
-DATABASE_URL=postgres://borealadmin:1Sunshine1!@boreal-db.postgres.database.azure.com:5432/postgres?sslmode=require
+DATABASE_URL=postgres://borealadmin:<YOUR_REAL_PASSWORD>@boreal-db.postgres.database.azure.com:5432/postgres?sslmode=require
 
-JWT_SECRET=supersecretjwtkey123
+AZURE_STORAGE_ACCESS_KEY=<your real key>
+AZURE_STORAGE_CONTAINER=<your container name>
 
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_SMS_NUMBER=
-TWILIO_VOICE_NUMBER=
-TWILIO_VOICE_WEBHOOK_URL=
+JWT_SECRET=<your real secret>
 
-SENDGRID_API_KEY=
-SENDGRID_FROM=no-reply@boreal.financial
+OPENAI_API_KEY=<your key>
+
+SENDGRID_API_KEY=<your key>
+
+O365_CLIENT_ID=<your client id>
+O365_CLIENT_SECRET=<your client secret>
+
+SLF_API_KEY=<your key>
+
+TEST_PHONE_NUMBER=<number>
+
+TWILIO_ACCOUNT_SID=<sid>
+TWILIO_API_KEY_SID=<sid>
+TWILIO_API_KEY_SECRET=<secret>
+TWILIO_AUTH_TOKEN=<token>
+TWILIO_CALLER_ID=<caller>
+TWILIO_PHONE_NUMBER=<phone>
+TWILIO_TWIML_APP_SID=<app sid>
