--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@azure/storage-blob": "12.29.1",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "1.20.3",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
