--- a/.env
+++ b/.env
@@ -1,28 +1,26 @@
 NODE_ENV=production
 PORT=5000
 
-DATABASE_URL=postgres://borealadmin:<YOUR_REAL_PASSWORD>@boreal-db.postgres.database.azure.com:5432/postgres?sslmode=require
+DATABASE_URL="postgres://borealadmin:1Sunshine1!@boreal-db.postgres.database.azure.com:5432/postgres?sslmode=require"
 
-AZURE_STORAGE_ACCESS_KEY=<your real key>
-AZURE_STORAGE_CONTAINER=<your container name>
+JWT_SECRET=devsecret
+OPENAI_API_KEY=dummy
+SENDGRID_API_KEY=dummy
 
-JWT_SECRET=<your real secret>
+AZURE_STORAGE_ACCESS_KEY=dummy
+AZURE_STORAGE_CONTAINER=dummy
 
-OPENAI_API_KEY=<your key>
+O365_CLIENT_ID=dummy
+O365_CLIENT_SECRET=dummy
 
-SENDGRID_API_KEY=<your key>
+SLF_API_KEY=dummy
 
-O365_CLIENT_ID=<your client id>
-O365_CLIENT_SECRET=<your client secret>
+TEST_PHONE_NUMBER=+15555550123
 
-SLF_API_KEY=<your key>
-
-TEST_PHONE_NUMBER=<number>
-
-TWILIO_ACCOUNT_SID=<sid>
-TWILIO_API_KEY_SID=<sid>
-TWILIO_API_KEY_SECRET=<secret>
-TWILIO_AUTH_TOKEN=<token>
-TWILIO_CALLER_ID=<caller>
-TWILIO_PHONE_NUMBER=<phone>
-TWILIO_TWIML_APP_SID=<app sid>
+TWILIO_ACCOUNT_SID=dummy
+TWILIO_API_KEY_SID=dummy
+TWILIO_API_KEY_SECRET=dummy
+TWILIO_AUTH_TOKEN=dummy
+TWILIO_CALLER_ID=dummy
+TWILIO_PHONE_NUMBER=dummy
+TWILIO_TWIML_APP_SID=dummy
