--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,23 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-
-    "strict": true,
-    "skipLibCheck": true,
+    "outDir": "./dist/server",
+    "rootDir": "./server/src",
+    "module": "commonjs",
+    "target": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "allowJs": false,
-    "noEmit": false,
-
-    "rootDir": "server/src",
-    "outDir": "dist/server/src"
+    "strict": false,
+    "skipLibCheck": true,
+    "allowJs": true
   },
-
   "include": ["server/src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["server/src/__tests__"]
 }
