--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist/server",
     "rootDir": "./server/src",
@@ -7,8 +8,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "strict": false,
     "skipLibCheck": true,
+    "strict": false,
     "allowJs": true
   },
   "include": ["server/src/**/*"],
