--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -10,7 +10,8 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+      # -----------------------------
+      uses: actions/checkout@v4
 
       - name: Setup Node 20
         uses: actions/setup-node@v4
@@ -25,22 +26,21 @@ jobs:
         run: npm ci
 
       # -----------------------------
-      # Build TypeScript (server only)
-      # Produces: server/dist/src/index.js
+      # Build TypeScript
+      # Builds to: dist/server/index.js
       # -----------------------------
       - name: Build server
         run: npm run build
 
       # -----------------------------
-      # Prepare deployment package
-      # We ONLY send compiled JS, package.json, and node_modules
+      # Package the ACTUAL build output
       # -----------------------------
       - name: Create deployment ZIP
         run: |
           rm -f release.zip
 
           zip -r release.zip \
-            server/dist \
+            dist/server \
             package.json \
             package-lock.json \
             node_modules \
@@ -75,6 +75,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: boreal-staff-server   # <-- FIXED
+          app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: .
