--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -10,8 +10,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-      # -----------------------------
-      uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Setup Node 20
         uses: actions/setup-node@v4
@@ -19,28 +18,17 @@ jobs:
           node-version: 20
           check-latest: true
 
-      # -----------------------------
-      # Install root deps
-      # -----------------------------
       - name: Install dependencies
         run: npm ci
 
-      # -----------------------------
-      # Build TypeScript
-      # Builds to: dist/server/index.js
-      # -----------------------------
       - name: Build server
         run: npm run build
 
-      # -----------------------------
-      # Package the ACTUAL build output
-      # -----------------------------
       - name: Create deployment ZIP
         run: |
           rm -f release.zip
-
           zip -r release.zip \
-            dist/server \
+            server/dist \
             package.json \
             package-lock.json \
             node_modules \
@@ -69,9 +57,6 @@ jobs:
       - name: Extract artifact
         run: unzip -o release.zip
 
-      # -----------------------------
-      # Deploy to Azure App Service
-      # -----------------------------
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
