--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,8 +7,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "allowJs": true
+    "skipLibCheck": true
   },
   "include": ["server/src/**/*"],
   "exclude": ["server/src/__tests__"]
