--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./server/src",
+    "outDir": "dist",
+    "rootDir": "server/src",
     "module": "commonjs",
     "target": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowJs": true
   },
   "include": ["server/src/**/*"],
   "exclude": ["server/src/__tests__"]
