Fix Azure start script to run dist/index.js

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch server/src/index.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/server/src/index.js",
+    "start": "node dist/index.js",
     "migrate": "tsx server/src/db/migrator.ts",
     "generate:migration": "drizzle-kit generate",
     "push:migration": "drizzle-kit push",
