--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,15 +1,18 @@
 {
+  "extends": "./tsconfig.json",
+
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "server/src",
+    "noEmit": false,
+    "outDir": "./dist",
+    "rootDir": "./server/src",
     "module": "commonjs",
     "target": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "allowJs": true
+    "skipLibCheck": true
   },
+
   "include": ["server/src/**/*"],
   "exclude": ["server/src/__tests__"]
 }
