Update tsconfig.build.json to exclude 'dist' directory
Added 'dist' directory to the exclusion list in tsconfig.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,6 +13,12 @@
     "skipLibCheck": true
   },
 
-  "include": ["server/src/**/*"],
-  "exclude": ["server/src/__tests__"]
+  "include": [
+    "server/src/**/*"
+  ],
+
+  "exclude": [
+    "server/src/__tests__",
+    "dist"
+  ]
 }
