--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,47 +15,30 @@ jobs:
       - name: Setup Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: 20
 
-      - name: Install production dependencies
-        run: npm ci --omit=dev
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build server
         run: npm run build
 
-      - name: Prepare deployment package
+      - name: Prepare deploy folder
         run: |
           rm -rf deploy
           mkdir deploy
           cp -R dist deploy/dist
-          cp package.json deploy/
-          cp package-lock.json deploy/
+          cp package.json deploy/package.json
+          cp package-lock.json deploy/package-lock.json
 
-      - name: Zip package
+      - name: Zip folder
         run: |
           cd deploy
           zip -r ../release.zip .
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: release
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: release
-
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "boreal-staff-server"
-          package: "release.zip"
+          app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: release.zip
