--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -25,17 +25,27 @@ jobs:
 
       - name: Prepare deploy folder
         run: |
+          set -euo pipefail
           rm -rf deploy
           mkdir -p deploy
+
+          # Copy compiled output
           cp -R dist deploy/dist
+
+          # Runtime deps for Azure ZIP Deploy (no build on server)
           cp -R node_modules deploy/node_modules
+
+          # App metadata
           cp package.json deploy/
           cp package-lock.json deploy/
-          # FIX: copy the real startup.sh from server/
-          cp server/startup.sh deploy/startup.sh
+
+          # Always generate startup.sh here so we never depend on repo paths
+          echo "node dist/index.js" > deploy/startup.sh
+          chmod +x deploy/startup.sh
 
       - name: Zip deploy
         run: |
+          set -euo pipefail
           cd deploy
           zip -r ../release.zip .
 
