--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -12,29 +12,35 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install deps
-        run: npm ci
+        run: |
+          cd server
+          npm ci
 
       - name: Build server
-        run: npm run build
+        run: |
+          cd server
+          npm run build
 
       - name: Prepare deploy folder
         run: |
           rm -rf deploy
           mkdir -p deploy
-          cp -R dist deploy/dist
-          cp -R node_modules deploy/node_modules
-          cp package.json deploy/
-          cp package-lock.json deploy/
 
-          # Azure will auto-run npm start → must point to dist/index.js
-          jq '.scripts.start = "node dist/index.js"' package.json > deploy/package.json.tmp
-          mv deploy/package.json.tmp deploy/package.json
+          # COPY SERVER BUILD OUTPUT
+          cp -R server/dist deploy/dist
+          cp -R server/node_modules deploy/node_modules
+          cp server/package.json deploy/
+          cp server/package-lock.json deploy/
+
+          # STARTUP SCRIPT
+          echo "node dist/index.js" > deploy/startup.sh
+          chmod +x deploy/startup.sh
 
       - name: Zip deploy
         run: |
