--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch server/src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
+    "postinstall": "prisma generate",
     "migrate": "tsx server/src/db/migrator.ts",
     "generate:migration": "drizzle-kit generate",
     "push:migration": "drizzle-kit push",
