--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -21,27 +21,23 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build server
+      - name: Build
         run: npm run build
 
-      - name: Prune dev dependencies
-        run: npm prune --production
-
-      - name: Create deployment package
-        run: |
-          mkdir deploy
-          cp -R dist deploy/dist
-          cp package.json deploy/
-          cp package-lock.json deploy/
+      # IMPORTANT: Azure Login (missing in your broken workflow)
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v3
         with:
-          app-name: Staff-Server
-          slot-name: production
-          package: deploy
+          app-name: 'Staff-Server'
+          package: .
