--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,12 @@
 node_modules
-dist
-logs
+npm-debug.log
+Dockerfile
+.dockerignore
+.git
+.gitignore
 .env
+coverage
+.dist
+.tmp
+dist
+server/dist
