--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,24 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2020",
-    "moduleResolution": "node",
-    "rootDir": "server/src",
-    "outDir": "dist",
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "lib": ["ES2022"],
     "strict": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+
+    "outDir": "dist",
+    "noImplicitAny": false,
+    "sourceMap": true
   },
   "include": [
-    "server/src/index.ts",
-    "server/src/routes/_int/**/*.ts",
-    "server/src/routes/auth.ts",
-    "server/src/routes/users.ts",
-    "server/src/routes/sms.ts",
-    "server/src/routes/documents.ts",
-    "server/src/services/authService.ts",
-    "server/src/services/usersService.ts",
-    "server/src/services/smsService.ts",
-    "server/src/services/documentService.ts",
-    "server/src/services/ocrService.ts",
-    "server/src/utils/env.ts",
-    "server/src/utils/validate.ts",
-    "server/src/utils/documentIntegrity.ts",
-    "server/src/utils/logger.ts",
-    "server/src/db/prisma.ts"
+    "server/src/**/*",
+    "server/types/**/*",
+    "server/**/*.d.ts"
   ],
-  "exclude": ["node_modules", "dist", "server/src/__tests__", "server/src/controllers", "server/src/middlewares"]
+  "exclude": ["dist", "node_modules"]
 }
